--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ss-dev
+  name: ss-dev-1
   
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ss-springboot
-  namespace: ss-dev
+  namespace: ss-dev-1
   annotations:
     kubernetes.io/change-cause: "Release 1.1 Version"
   labels:
@@ -43,7 +43,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: ss
-  namespace: ss-dev
+  namespace: ss-dev-1
 spec:
   type: NodePort
   selector:
