--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ss-dev-1
+  name: ss-dev
   
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ss-springboot
-  namespace: ss-dev-1
+  namespace: ss-dev
   annotations:
     kubernetes.io/change-cause: "Release 1.1 Version"
   labels:
@@ -23,7 +23,7 @@ spec:
       labels:
         app: ss
     spec:
-      serviceAccountName: eks-sa-1
+      serviceAccountName: eks-sa
       automountServiceAccountToken: false
       restartPolicy: Always
       containers:
@@ -43,7 +43,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: ss
-  namespace: ss-dev-1
+  namespace: ss-dev
 spec:
   type: NodePort
   selector:
